ubiquity (1.3.22) UNRELEASED; urgency=low

  [ Colin Watson ]
  * New partitioner:
    - Fix edit dialog not to try to resize partitions even if the resize
      spinbutton was left untouched (LP: #85227).
  * Fix crash if multiple newworld boot partitions are present (LP: #84429).
  * GTK frontend:
    - Fix backup from user information page if migration-assistant is not
      active.
  * Fill in a default username based on the user's full name (LP: #84550).

  [ Jonathan Riddell ]
  * Add new partitioner for KDE frontend

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 15 Feb 2007 10:56:23 +0000

ubiquity (1.3.21) feisty; urgency=low

  * New partitioner:
    - Try harder not to interfere with autopartitioning (LP: #84597).
    - Ignore parted exceptions presented with priority medium or below.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 14 Feb 2007 13:08:09 +0000

ubiquity (1.3.20) feisty; urgency=low

  [ Colin Watson ]
  * KDE frontend: Remove now-unused kde-distro-logo.png.

  [ Martin Pitt ]
  * debian/ubiquity.install-any: Move apport package hook to
    /usr/share/apport/package-hooks/; this is where apport looks for them
    from 0.52 onwards.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  9 Feb 2007 18:44:53 +0000

ubiquity (1.3.19) feisty; urgency=low

  [ Colin Watson ]
  * New partitioner: Don't allow creating a disk label or creating, editing,
    or deleting a partition while other similar operations are in progress.
  * Display a warning message next to the password entry box if running in
    debug mode, since the password will then end up in the log file via
    debconf debugging.
  * Don't crash if /etc/X11/xorg.conf is unaccountably missing (LP: #83927).
  * Import translations for Cancel, Back, Forward etc. buttons from gtk+2.0
    2.10.9-0ubuntu1 (LP: #43915).
  * Automatic update of included source packages: apt-setup 1:0.16ubuntu3,
    migration-assistant 0.3.1, partman-auto 62ubuntu4,
    partman-basicfilesystems 51ubuntu1.
