@@ -4,6 +4,7 @@ ubiquity (1.3.22) UNRELEASED; urgency=low
   * New partitioner:
     - Fix edit dialog not to try to resize partitions even if the resize
       spinbutton was left untouched (LP: #85227).
+    - Add contextual buttons to GTK frontend (part of LP: #83166).
   * Fix crash if multiple newworld boot partitions are present (LP: #84429).
   * GTK frontend:
     - Fix backup from user information page if migration-assistant is not
